src/objects/Session__c.object
<CustomObject>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deck_Front__c</fullName>
        <label>Deck Front</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Deck_Front</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deck_Session_Number__c</fullName>
        <label>Deck Session Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guest_Owned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Guest Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Levels__c</fullName>
        <label>Levels</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Level</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Cards_Drawn__c</fullName>
        <label>Number of New Cards Drawn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Correct__c</fullName>
        <formula>Total_Number_Correct__c / Total_Number_of_Cards__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Correct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Incorrect__c</fullName>
        <formula>Total_Number_Incorrect__c / Total_Number_of_Cards__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Incorrect</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Number_Correct__c</fullName>
        <label>Total Number Correct</label>
        <summaryFilterItems>
            <field>Flashcard__c.Number_of_Times_Incorrect__c</field>
            <operation>equals</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Flashcard__c.Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Number_Incorrect__c</fullName>
        <label>Total Number Incorrect</label>
        <summaryFilterItems>
            <field>Flashcard__c.Number_of_Times_Incorrect__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Flashcard__c.Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Cards__c</fullName>
        <label>Total Number of Cards</label>
        <summaryForeignKey>Flashcard__c.Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Session</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Deck_Front__c</columns>
        <columns>Levels__c</columns>
        <columns>Total_Number_of_Cards__c</columns>
        <columns>Total_Number_Correct__c</columns>
        <columns>Total_Number_Incorrect__c</columns>
        <columns>Completed_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Guest_Sessions</fullName>
        <columns>NAME</columns>
        <columns>Deck_Front__c</columns>
        <columns>Levels__c</columns>
        <columns>Total_Number_of_Cards__c</columns>
        <columns>Total_Number_Correct__c</columns>
        <columns>Total_Number_Incorrect__c</columns>
        <columns>Completed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Guest_Owned__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Guest Sessions</label>
    </listViews>
    <listViews>
        <fullName>My_Sessions</fullName>
        <columns>NAME</columns>
        <columns>Deck_Front__c</columns>
        <columns>Levels__c</columns>
        <columns>Total_Number_of_Cards__c</columns>
        <columns>Total_Number_Correct__c</columns>
        <columns>Total_Number_Incorrect__c</columns>
        <columns>Completed_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Guest_Owned__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Sessions</label>
    </listViews>
    <nameField>
        <displayFormat>SS-{000000000}</displayFormat>
        <label>Session Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>